homepage included on package.json

--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "C:/Users/Diego/Desktop/My Stuff/Personal/Aprendizaje/Programming/Platzi/Full Stack Developer con JavaScript/13. Curso de React.js/curso-react-intro/build/"
 }
