--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -29,5 +31,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "C:/Users/Diego/Desktop/My Stuff/Personal/Aprendizaje/Programming/Platzi/Full Stack Developer con JavaScript/13. Curso de React.js/curso-react-intro/build/"
+  "homepage": "https://yodaad.github.io/curso-react-intro"
 }
